<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2010 David Lazăr

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<resources>
    <string name="app_name">Patois</string>

    <!-- Strings in the intro activity. -->
    <string name="welcome_text">Welcome to Patois</string>
    <string name="getting_started_text">New here?  Get a short intro.</string>
    <string name="start_tutorial">Start tutorial</string>
    <string name="restore_database_text">Got your DB backup?  Restore it now.</string>
    <string name="restore_database">Restore database</string>
    <string name="skip_introduction_text">In a hurry?  Jump right in!</string>
    <string name="start_patois">Start Patois</string>
    <string name="final_intro_text">Have fun!</string>

    <!-- Strings in the main activity. -->
    <string name="vocabulary">Vocabulary:</string>
    <string name="browse_words">Browse words</string>
    <string name="add_words">Add words</string>
    <string name="practice">Practice translating:</string>
    <string name="foreign">Foreign Language</string>
    <string name="from_foreign">From %1$s</string>
    <string name="to_foreign">To %1$s</string>
    <string name="select_language">Select language</string>
    <string name="edit_languages">Edit languages</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_overwrite">Confirm overwrite</string>
    <string name="save_database">Backup database</string>
    <string name="enter_destination_file_name">Enter destination file name:</string>
    <string name="save">Save</string>
    <string name="external_file_exists">The file %1$s already exists.  Are you sure you want to replace it?</string>
    <string name="saving_database">Saving database backup to %1$s.</string>
    <string name="save_successful">Database backup saved successfully.</string>
    <string name="save_failed">Failed to save the database backup.</string>
    <string name="enter_source_file_name">Enter the name of the backup file:</string>
    <string name="restore">Restore</string>
    <string name="internal_file_exists">You seem to already have a database.  Restoring from backup will permanently destroy the contents of your existing database: you will lose all your existing words and languages.  Are you sure you want to continue with the database restore?</string>
    <string name="external_file_missing">The file %1$s doesn\'t seem to exist.  Enter the correct file name of your database backup.</string>
    <string name="restoring_database">Restoring database from %1$s.</string>
    <string name="restore_successful">Database restored successfully.</string>
    <string name="restore_failed">Failed to restore the database.</string>
    <string name="export_words">Export words</string>
    <string name="export_words_to_csv">Export words to CSV</string>
    <string name="export">Export</string>
    <string name="exporting_words">Exporting words to %1$s.</string>
    <string name="export_successful">Words exported to CSV succesfully.</string>
    <string name="export_failed">Failed to export words to CSV.</string>

    <!-- Strings in the "edit languages" activity. -->
    <string name="enter_languages">Native and foreign languages:</string>
    <string name="add_language">Add a new language</string>
    <string name="language_code">code</string>
    <string name="language_name">Language name</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="language_not_empty">There are %1$s words defined in %2$s.  Are you sure you want to remove it?</string>

    <!-- Strings in the "browse words" activity. -->
    <string name="no_translations">No translations</string>
    <string name="sort_words">Sort words</string>
    <string name="sort_by_name">by name</string>
    <string name="sort_by_score">by score</string>
    <string name="sort_newest_first">newest first</string>
    <string name="sort_oldest_first">oldest first</string>

    <!-- Strings in the "edit word" activity. -->
    <string name="translation">Translation</string>
    <string name="add_translation">Add a new translation</string>
    <string name="new_word">New word</string>
    <string name="reset_score">Reset score</string>
    <string name="delete_word">Delete word</string>
    <string name="score_was_reset">The score for \'%1$s\' was reset.</string>

    <!-- Strings in the "practice" activity. -->
    <string name="show_answer">Show answer</string>
    <string name="i_knew_it">I knew it</string>
    <string name="i_didnt_know_it">I didn\'t know it</string>
    <string name="edit_word">Edit word</string>
    <string name="no_words_for_practice">There aren\'t any words to practice with.  Add some words and try again.</string>

</resources>
