<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/whole_screen"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="16dip"
            android:gravity="center"
            android:text="@string/welcome_text"
            android:textAppearance="@style/intro_title"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dip"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="16dip"
            android:gravity="center"
            android:text="@string/getting_started_text"
            android:textAppearance="@style/intro_text"
            />

        <Button android:id="@+id/start_tutorial"
            android:layout_marginTop="18dip"
            android:layout_marginLeft="40dip"
            android:layout_marginRight="40dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_tutorial"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dip"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="16dip"
            android:gravity="center"
            android:text="@string/import_database_text"
            android:textAppearance="@style/intro_text"
            />

        <Button android:id="@+id/import_database"
            android:layout_marginTop="18dip"
            android:layout_marginLeft="40dip"
            android:layout_marginRight="40dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/import_database"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dip"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="16dip"
            android:gravity="center"
            android:text="@string/skip_introduction_text"
            android:textAppearance="@style/intro_text"
            />

        <Button android:id="@+id/start_patois"
            android:layout_marginTop="18dip"
            android:layout_marginLeft="40dip"
            android:layout_marginRight="40dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_patois"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dip"
            android:layout_marginBottom="16dip"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="16dip"
            android:gravity="center"
            android:text="@string/final_intro_text"
            android:textAppearance="@style/intro_text"
            />

        <ImageView
            android:src="@drawable/patois"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dip"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="16dip"
            android:scaleType="center"
            />

    </LinearLayout>
</ScrollView>
