<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >

        <LinearLayout android:id="@+id/word_panel"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="8dip"
            android:layout_marginBottom="8dip"
            >

            <LinearLayout android:id="@+id/main_word"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >

                <TextView android:id="@+id/name"
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textAppearance="@style/practice_main_word_name"
                    android:text="polenta"
                    />

                <TextView android:id="@+id/language"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10sp"
                    android:gravity="left"
                    android:textAppearance="@style/practice_main_word_language"
                    android:text="(en)"
                    />

            </LinearLayout>
        </LinearLayout>

        <FrameLayout android:id="@+id/button_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout android:id="@+id/question_side"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@android:style/ButtonBar"
                >

                <Button android:id="@+id/show_answer"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/show_answer"
                    />

            </LinearLayout>

            <LinearLayout android:id="@+id/answer_side"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@android:style/ButtonBar"
                android:visibility="gone"
                >

                <Button android:id="@+id/i_knew_it"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/i_knew_it"
                    />

                <Button android:id="@+id/i_didnt_know_it"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/i_didnt_know_it"
                    />

            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</ScrollView>
