<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2010 David Lazăr

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >

        <LinearLayout android:id="@+id/main_word"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="top"
            android:background="@android:drawable/bottom_bar"
            android:paddingTop="8dip"
            android:layout_marginBottom="8dip"
            >

            <Button android:id="@+id/language"
                android:layout_width="60sp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:layout_marginBottom="2dip"
                android:singleLine="true"
                />

            <AutoCompleteTextView android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="2dip"
                android:layout_marginBottom="2dip"
                android:layout_marginRight="8dip"
                android:singleLine="true"
                android:textSize="20sp"
                android:textStyle="bold"
                android:hint="@string/new_word"
                />

        </LinearLayout>

        <!--
        The translations list is populated with views expanded from
        edit_word_entry.xml.
        -->
        <LinearLayout android:id="@+id/translations"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_marginRight="12dip"
                android:text="@string/add_translation"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="?android:attr/textColorSecondary"
                android:gravity="center_vertical|right"
                />

            <ImageButton android:id="@+id/add_translation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dip"
                style="@style/add_button"
                />

        </LinearLayout>

        <!--
        Space filler for when the ScrollView is smaller than the screen.
        This will push the Done/Revert buttons to the bottom of the screen.
        -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@android:style/ButtonBar"
            >

            <Button android:id="@+id/done"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/done"
                />

            <Button android:id="@+id/new_word"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_word"
                />

            <Button android:id="@+id/cancel"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
